fixed horizontal scroll firstscreen on mobile

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -114,9 +114,9 @@ input {
 		}
 	}
 }
-@media (max-height: 500px) and (orientation: landscape) {
-	.Mainpage {
-		overflow-y: visible;
-		overflow-x: visible;
-	}
-}
+// @media (max-height: 500px) and (orientation: landscape) {
+// 	.Mainpage {
+// 		overflow-y: visible;
+// 		overflow-x: visible;
+// 	}
+// }
